[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
yasna = { path = "../../..", features = ["chrono", "bit-vec", "num-bigint"] }
num-traits = { git = "https://github.com/NexTokenTech/num-traits-sgx" }
num-bigint = { git = "https://github.com/NexTokenTech/num-bigint-sgx" }
chrono = { git = "https://github.com/NexTokenTech/chrono-sgx" }
bit-vec = { version = "0.6.1", default-features = false }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_tunittest = {git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
